# cs224w-final-project

./: .gitignore  .gitmodules  Makefile  README.md  config.tcl  pyproject.toml
checkpoints/: best_model.pt  evaluation.csv  gcn_model.pt  simple_gnn.pt
checkpoints/gcn_combined_area/: best_model.pt  evaluation.csv
checkpoints/gcn_combined_power/: best_model.pt  evaluation.csv
checkpoints/gcn_combined_timing/: best_model.pt  evaluation.csv
checkpoints/gcn_huber_area/: best_model.pt  evaluation.csv
checkpoints/gcn_huber_power/: best_model.pt  evaluation.csv
checkpoints/gcn_huber_timing/: best_model.pt  evaluation.csv
checkpoints/gcn_log_transform_area/: best_model.pt  evaluation.csv
checkpoints/gcn_log_transform_power/: best_model.pt  evaluation.csv
checkpoints/gcn_log_transform_timing/: best_model.pt  evaluation.csv
configs/: gcn.yaml  gcn_combined.yaml  gcn_combined_area.yaml  gcn_combined_power.yaml  gcn_combined_timing.yaml  gcn_huber.yaml  gcn_huber_area.yaml  gcn_huber_power.yaml  gcn_huber_timing.yaml  gcn_log_transform.yaml  gcn_log_transform_area.yaml  gcn_log_transform_power.yaml  gcn_log_transform_timing.yaml  gcn_vanilla_area.yaml  gcn_vanilla_power.yaml  gcn_vanilla_timing.yaml  gcn_weighted.yaml  gcn_weighted_area.yaml  gcn_weighted_power.yaml  gcn_weighted_timing.yaml  medium.md  test.yaml  topo.yaml  topo_area.yaml  topo_more_layers.yaml  topo_power.yaml  topo_timing.yaml
examples/: net.json  top.sv
scripts/: check_op_types.py  data_preprocess.sh  train_gcn.sh  train_topo.sh
src/: __init__.py  train.new.py  train.py
(+9429 files in other folders)
