[project]
name = "cs224w-final-proj"
version = "0.1.0"
description = "CS224W Final Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "pandas>=2.3.3",
    "pylint>=4.0.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
    "transformers>=4.57.3",
]
